--- a/src/app/share/header/header.component.html
+++ b/src/app/share/header/header.component.html
@@ -13,13 +13,14 @@
   </label>
   <div class="ae-container-fluid rk-topbar">
     <h1 class="rk-logo">
-      <a routerLink="">Antonio's<sup>tm</sup></a>
+      <a routerLink="">{{_servicio.info.titulo}}<sup>tm</sup></a>
     </h1>
     <nav class="rk-navigation">
       <ul class="rk-menu">
         <li routerLinkActive="active" class="rk-menu__item">
           <a routerLink="home" class="rk-menu__link">Home</a>
         </li>
+        
         <!-- <li routerLinkActive="active" class="rk-menu__item">
           <a href="portfolio.html" class="rk-menu__link">Portfolio</a>
         </li> -->
