Added search component, modified portfolio, modified css added producto-description-interface

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-
-<section class="ae-container-fluid rk-main">
+<section>
+<!-- <section class="ae-container-fluid rk-main"> -->
   <!-- <app-portafolio></app-portafolio> -->
   <!-- <app-item></app-item> -->
   <!-- <app-about></app-about> -->
