--- a/src/app/share/header/header.component.html
+++ b/src/app/share/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="ae-container-fluid ae-container-fluid--full rk-header">
   <input type="checkbox" id="mobile-menu" class="rk-mobile-menu" />
+
   <label for="mobile-menu">
     <svg>
       <use xlink:href="assets/img/symbols.svg#bar"></use>
@@ -11,16 +12,17 @@
       <use xlink:href="assets/img/symbols.svg#bar"></use>
     </svg>
   </label>
+
   <div class="ae-container-fluid rk-topbar">
     <h1 class="rk-logo">
-      <a routerLink="">{{_servicio.info.titulo}}<sup>tm</sup></a>
+      <a routerLink="">{{ _servicio.info.titulo }}<sup>tm</sup></a>
     </h1>
     <nav class="rk-navigation">
       <ul class="rk-menu">
         <li routerLinkActive="active" class="rk-menu__item">
           <a routerLink="home" class="rk-menu__link">Home</a>
         </li>
-        
+
         <!-- <li routerLinkActive="active" class="rk-menu__item">
           <a href="portfolio.html" class="rk-menu__link">Portfolio</a>
         </li> -->
@@ -37,25 +39,28 @@
               </ul>
             </nav>
           </li> -->
-          
+
         <li routerLinkActive="active" class="rk-menu__item">
           <a routerLink="about" class="rk-menu__link">About</a>
         </li>
       </ul>
-
-      <form class="rk-search">
+      <div class="rk-search">
         <input
           type="text"
-          placeholder="Search"
+          (keyup.enter)="buscarProducto(txtBuscar.value)"
+          placeholder="Buscar..."
           id="urku-search"
           class="rk-search-field"
+          #txtBuscar
         />
+
         <label for="urku-search">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-search"></use>
           </svg>
         </label>
-      </form>
+
+      </div>
     </nav>
   </div>
 </header>
