added circle ci

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
+<!-- 
+  Objetivo memoria primer test, para no olvidarme.
+  <div class="content">
+  <span>{{title}} app is running!</span>
+</div> -->
 <app-header></app-header>
 <section>
-<!-- <section class="ae-container-fluid rk-main"> -->
+
+  <!-- <section class="ae-container-fluid rk-main"> -->
   <!-- <app-portafolio></app-portafolio> -->
   <!-- <app-item></app-item> -->
   <!-- <app-about></app-about> -->
